syntax = "proto3";

package swiftnav.sbp.ndb;

message MsgNdbEvent {
}
