syntax = "proto3";

package swiftnav.sbp.observation;

import "gnss.proto";

message ObservationHeader {
    GpsTime t = 1;
    uint32 n_obs = 2;
}

message Doppler {
    sint32 i = 1;
    uint32 f = 2;
}

message PackedObsContent {
    uint32 P = 1;
    CarrierPhase L = 2;
    Doppler D = 3;
    uint32 cn0 = 4;
    uint32 lock = 5;
    uint32 flags = 6;
    GnssSignal sid = 7;
}

message MsgObs {
    ObservationHeader header = 1;
    repeated PackedObsContent obs = 2;
}

message MsgBasePosLlh {
    Double lat = 1;
    Double lon = 2;
    Double height = 3;
}

message MsgBasePosEcef {
    Double x = 1;
    Double y = 2;
    Double z = 3;
}

message EphemerisCommonContent {
    GnssSignal sid = 1;
    GpsTimeSec toe = 2;
    Double ura = 3;
    uint32 fit_interval = 4;
    uint32 valid = 5;
    uint32 health_bits = 6;
}

message MsgEphemerisGps {
    EphemerisCommonContent common = 1;
    Double tgd = 2;
    Double c_rs = 3;
    Double c_rc = 4;
    Double c_uc = 5;
    Double c_us = 6;
    Double c_ic = 7;
    Double c_is = 8;
    Double dn = 9;
    Double m0 = 10;
    Double ecc = 11;
    Double sqrta = 12;
    Double omega0 = 13;
    Double omegadot = 14;
    Double w = 15;
    Double inc = 16;
    Double inc_dot = 17;
    Double af0 = 18;
    Double af1 = 19;
    Double af2 = 20;
    GpsTimeSec toc = 21;
    uint32 iode = 22;
    uint32 iodc = 23;
}

message MsgEphemerisSbas {
    EphemerisCommonContent common = 1;
    repeated Double pos = 2;
    repeated Double vel = 3;
    repeated Double acc = 4;
    Double a_gf0 = 5;
    Double a_gf1 = 6;
}

message MsgEphemerisGlo {
    EphemerisCommonContent common = 1;
    Double gamma = 2;
    Double tau = 3;
    Double d_tau = 4;
    repeated Double pos = 5;
    repeated Double vel = 6;
    repeated Double acc = 7;
    uint32 fcn = 8;
    uint32 iod = 9;
}

message MsgIono {
    GpsTimeSec t_nmct = 1;
    Double a0 = 2;
    Double a1 = 3;
    Double a2 = 4;
    Double a3 = 5;
    Double b0 = 6;
    Double b1 = 7;
    Double b2 = 8;
    Double b3 = 9;
}

message MsgSvConfigurationGps {
    GpsTimeSec t_nmct = 1;
    uint32 l2c_mask = 2;
}

message MsgGroupDelay {
    GpsTimeSec t_op = 1;
    GnssSignal sid = 2;
    uint32 valid = 3;
    sint32 tgd = 4;
    sint32 isc_l1ca = 5;
    sint32 isc_l2c = 6;
}

message AlmanacCommonContent {
    GnssSignal sid = 1;
    GpsTimeSec toa = 2;
    Double ura = 3;
    uint32 fit_interval = 4;
    uint32 valid = 5;
    uint32 health_bits = 6;
}

message MsgAlmanacGps {
    AlmanacCommonContent common = 1;
    Double m0 = 2;
    Double ecc = 3;
    Double sqrta = 4;
    Double omega0 = 5;
    Double omegadot = 6;
    Double w = 7;
    Double inc = 8;
    Double af0 = 9;
    Double af1 = 10;
}

message MsgAlmanacGlo {
    AlmanacCommonContent common = 1;
    Double lambda_na = 2;
    Double t_lambda_na = 3;
    Double i = 4;
    Double t = 5;
    Double t_dot = 6;
    Double epsilon = 7;
    Double omega = 8;
}

message MsgGloBiases {
    uint32 mask = 1;
    sint32 l1ca_bias = 2;
    sint32 l1p_bias = 3;
    sint32 l2ca_bias = 4;
    sint32 l2p_bias = 5;
}