syntax = "proto3";

package swiftnav.sbp.orientation;

message MsgBaselineHeading {
}

message MsgOrientQuat {
}

message MsgOrientEuler {
}

message MsgAngularRate {
}
